Windowsインストーラを追加する。また、一部ソースの整形を行う。